tests/data/placebo/test_eks_query/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "This security group was generated by AWS Marketplace and is based on recommended settings for Amazon ECS-Optimized Amazon Linux AMI version 2017.09.h provided by Amazon Web Services",
        "Tags": [
          {
            "Value": "",
            "Key": "Name"
          },
          {
            "Value": "eks",
            "Key": "App"
          }
        ],
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 22,
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "ToPort": 22,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "Amazon ECS-Optimized Amazon Linux AMI-2017-09-h-AutogenByAWSMP-4",
        "VpcId": "vpc-d2d616b5",
        "OwnerId": "644160558196",
        "GroupId": "sg-b796a2c0"
      }
    ],
    "ResponseMetadata": {}
  }
}
